@@ -1,7 +1,12 @@
+# -*- coding: utf-8 -*-
 # Welcom application
 
 class Welcom
   include Gluon::Controller
+
+  def self.page_encoding
+    __ENCODING__
+  end
 
   def request_GET
   end
