@@ -1,5 +1,8 @@
 2009-08-07  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/application.rb, run/lib/Welcom.rb: page-encoding is
+	set to charset of content-type.
+
 	* lib/gluon/application.rb, lib/gluon/builder.rb,
 	lib/gluon/template.rb, run/config.rb, run/config.ru,
 	run/view/Welcom.erb: application builder and minimum example.
